Create Navbar, Sidebar, and BMR page
Created the navbar, sidebar, and BMR calculator page along with some other files/components required to make the calculator function as expected. Responsive design is not incorporated just yet.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'meslo';
+    src: url('/fonts/meslo_regular.ttf') format('truetype');
+}  
